# nautilus

./: .#Makefile  .config  .gdb_history  .run.swp  2  2r  ENV  Makefile  define.txt  error.txt  grep  r
include/: autoconf.h  cscope.out
include/config/openmp/: rt.h
include/nautilus/: #thread.h#  .#thread.h  .atomic.h.swp  .naut_types.h.swp  .semaphore.h.swp  .spinlock.h.swp  env.h  semaphore.h
kmp-exp/: a.out  gete.c
linux_exp/: conf  conf.c  conf.c~
nk_function/include/: nk_header.h  nl_types.h
nk_function/src/: CMakeLists.txt  nk_source.c
openmp/: cscope.out  do_cmake  run.sh
openmp/.svn/: wc.db
openmp/runtime/: CMakeLists.txt
scripts/: format_syms
scripts/basic/: docproc  fixdep  split-include
scripts/kconfig/: conf  mconf
src/: Makefile
src/include/: cscope.out
src/legion_runtime/: .utilities.h.swp
src/nautilus/: #libccompat.c#  #scheduler.c#  #thread.c#  .#semaphore.c  .#thread.c  .libccompat.c.swo  .libccompat.c.swp  .scheduler.c.swm  .scheduler.c.swn  .scheduler.c.swo  .scheduler.c.swp  .semaphore.c.swl  .semaphore.c.swm  .semaphore.c.swn  .semaphore.c.swo  .semaphore.c.swp  .thread.c.swl  .thread.c.swn  .thread.c.swo  .thread.c.swp  Makefile  env.c  libccompat.c  scheduler.c  semaphore.c  thread.c
src/openmp/: #omptest.c#  #pthread_helper.c#  #streamcluster_original.c#  Makefile  nk_header.h  nk_pthread.c  nk_pthread.h~  nk_source.c  nl_types.h  omptest.c  omptest.c~  pthread.h  pthread_helper.c  pthread_helper.c~  pthread_shared_types.h  pthreadtypes.h  pthreadtypes.h~  qsort.c  streamcluster_original.c  sysconf.c  sysconf.c~
(+71 files in other folders)
